# slider

./: CMakeLists.txt  README.md  amarokAdaptor.cpp  amarokAdaptor.h  amarokInterface.cpp  amarokInterface.h  amarokMediaPlayer2.xml  demo.pro  inheritedslider.cpp  inheritedslider.h  inheritedslider.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
